ffmpeg: Fix segfault when using ffmpeg with ffserver where ffmpeg does not supply all requested streams. Fixes Ticket675

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>